--- a/.github/workflows/glitch.yml
+++ b/.github/workflows/glitch.yml
@@ -12,10 +12,10 @@ jobs:
         with:
           github-token: ${{secrets.GITHUB_TOKEN}}
           script: |
-            github.pulls.create({
+            github.repos.merge({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              title: '🎉 Updated with Glitch',
+              commit_message: '🎉 Updated with Glitch',
               head: 'glitch',
               base: 'master',
             });
