🎸🎖 Updated with Glitch

--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
-  "//1": "describes your app and its dependencies",
-  "//2": "https://docs.npmjs.com/files/package.json",
-  "//3": "updating this file will download and update your packages",
-  "name": "hello-express",
-  "version": "0.0.1",
-  "description": "A simple Node app built on Express, instantly up and running.",
+  "name": "basic-csv-wdc",
+  "version": "1.0.0",
+  "description": "A simple Tableau Web Data Connector for connecting to CSVs hosted on the web.",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
@@ -17,7 +14,7 @@
     "node": "12.x"
   },
   "repository": {
-    "url": "https://glitch.com/edit/#!/hello-express"
+    "url": "https://github.com/KeshiaRose/Basic-CSV-WDC"
   },
   "license": "MIT",
   "keywords": [
